RESOLVED FIXED 79814
[BlackBerry] x86 build fix after cleaning up WebPage.cpp
https://bugs.webkit.org/show_bug.cgi?id=79814
Summary [BlackBerry] x86 build fix after cleaning up WebPage.cpp
Jacky Jiang
Reported 2012-02-28 11:19:01 PST
x86 build fix after cleaning up WebPage.cpp.
Attachments
Patch (2.39 KB, patch)
2012-02-28 11:28 PST, Jacky Jiang
no flags
Jacky Jiang
Comment 1 2012-02-28 11:28:49 PST
WebKit Review Bot
Comment 2 2012-02-28 12:06:30 PST
Comment on attachment 129298 [details] Patch Clearing flags on attachment: 129298 Committed r109135: <http://trac.webkit.org/changeset/109135>
WebKit Review Bot
Comment 3 2012-02-28 12:06:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.