[BlackBerry] x86 build fix after cleaning up WebPage.cpp https://bugs.webkit.org/show_bug.cgi?id=79814

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-02-28
Reviewed by Antonio Gomes.

x86 build fix, keep WebPage::destroyWebPageCompositor() method where it
was which was outside of USE(ACCELERATED_COMPOSITING).

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::destroyWebPageCompositor):
(WebKit):

Canonical link: https://commits.webkit.org/96895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109135 268f45cc-cd09-0410-ab3c-d52691b4dbfc